fix: prevent mat icons from being clipped
* mat icons now inherit overflow instead of default hidden across all apps

--- a/apps/admin-gui/src/styles.scss
+++ b/apps/admin-gui/src/styles.scss
@@ -1565,3 +1565,7 @@ td.mat-cell {
 .align-checkbox mat-checkbox {
   margin-top: 7px !important;
 }
+
+mat-icon {
+  overflow: inherit !important;
+}
