--- a/apps/publications/src/styles.scss
+++ b/apps/publications/src/styles.scss
@@ -320,3 +320,7 @@ $i: 0;
     fill: currentColor;
   }
 }
+
+mat-icon {
+  overflow: inherit !important;
+}
